# hw_project

./: .dockerignore  .gitignore  Dockerfile  README.md  exploration_solution.ipynb  pyproject.toml  synthetic_data_generation.md  transformer_addon.py
.ipynb_checkpoints/: explore-checkpoint.ipynb  explore_-checkpoint.ipynb  explore_train-checkpoint.ipynb
best_pipeline_search_runs/run_20260722T222722Z/: metrics_other.json  model.joblib  oof_policy_metrics.json  runtime_config.json
best_pipeline_search_runs/run_20260723T201910Z_PROD/: candidate_cv_results.json  metrics_test.json  model.joblib  splits.json
config/api/: settings.yaml
config/model/: candidates.yaml  excluded_files.yaml  predict.yaml  text.yaml  train.yaml  tune.yaml
kubernetes/local_deploy/: linux_local.sh  win_local.ps1
kubernetes/manifests/: deployment.yaml  service.yaml
src/api/: batching.py  dependencies.py  errors.py  lifespan.py  main.py  middleware.py  model_loader.py  routes.py  routes_classification.py  routes_health.py  schemas.py  settings.py
src/api/config/: __init__.py  settings.py
src/model/: README.md  __init__.py
src/model/data_preparation/: __init__.py  audit_document.py  leakage.py  loader.py  splits.py  text.py
src/model/evaluate/: __init__.py  callers.py  evaluator.py  metrics.py  policies.py  predictions.py  schemas.py
src/model/experiment/: __init__.py  io.py  manifest.py  naming.py  runner.py  writer.py
src/model/predict/: __init__.py  base.py  length.py  predictor.py  validators.py
src/model/train/: __init__.py  constants.py  models.py  schemas.py  trainer.py  validators.py
src/model/tune/: __init__.py  candidates.py  runner.py  selection.py  thresholds.py  tuner.py  validators.py
tests/: conftest.py
tests/api/: test_api_endpoints.py
tests/model/: scenarios.md
tests/model/acceptance/: test_i1a_known_class_by_length_behavior.py  test_i1a_known_class_by_length_fixtures.py
tests/tools/: generate_id_by_length_fixtures.py
(+14 files in other folders)
